==> flyghost/OneOS-V2.1.0/drivers/hal/nxp/kk/k0x_2x/drivers/drv_gpio.c <==
#include "drv_gpio.h"
#include "fsl_common.h"
#include "fsl_iocon.h"
#include "fsl_gpio.h"
#include "fsl_gint.h"
#include "fsl_pint.h"
#include "fsl_inputmux.h"
#define get_port(x)      ((x-1) / 32)
#define get_pin(x)       ((x-1) % 32)
#define PIN_MAX_VAL                64
#define IRQ_MAX_VAL                 8
#define __ARRAY_LEN(array) (sizeof(array)/sizeof(array[0]))
#define __LPC55S69_PIN_DEFAULT {0, 0, 0, 0}
#define __LPC55S69_PIN(INDEX, REG, PORT, PIN) {INDEX, REG, PORT, PIN}

static void lpc_pin_mode(os_device_t *dev, os_base_t pin, os_base_t mode)
{
    int dir;
    uint32_t pin_cfg;

    if ((pin > __ARRAY_LEN(lpc_pin_map)) || (pin == 0))
    {
        return;
    }

    switch (mode)
    {
        case PIN_MODE_OUTPUT:
        {
            dir = kGPIO_DigitalOutput;
            pin_cfg = IOCON_FUNC0 | IOCON_DIGITAL_EN | IOCON_MODE_PULLUP;
        }
        break;

        case PIN_MODE_INPUT:
        {
            dir = kGPIO_DigitalInput;
            pin_cfg = IOCON_FUNC0 | IOCON_INPFILT_OFF | IOCON_DIGITAL_EN;
        }
        break;

        case PIN_MODE_INPUT_PULLDOWN:
        {
            dir = kGPIO_DigitalInput;
            pin_cfg = IOCON_FUNC0 | IOCON_INPFILT_OFF | IOCON_DIGITAL_EN | IOCON_MODE_PULLDOWN;
        }
        break;

        case PIN_MODE_INPUT_PULLUP:
        {
            dir = kGPIO_DigitalInput;
            pin_cfg = IOCON_FUNC0 | IOCON_INPFILT_OFF | IOCON_DIGITAL_EN | IOCON_MODE_PULLUP;
        }
        break;

        case PIN_MODE_OUTPUT_OD:
        {
            dir = kGPIO_DigitalOutput;
            pin_cfg = IOCON_FUNC0 | IOCON_OPENDRAIN_EN | IOCON_DIGITAL_EN;
        }
        break;
    }
    
    /* Enable IOCON Clock */
    CLOCK_EnableClock(kCLOCK_Iocon);
    IOCON->PIO[lpc_pin_map[pin].gpio_port][lpc_pin_map[pin].gpio_pin] = pin_cfg;       
    /* Disable IOCON Clock -- To Save Power */
    CLOCK_DisableClock(kCLOCK_Iocon);
    
    gpio_pin_config_t pin_config = {(gpio_pin_direction_t)dir, 1};
    GPIO_PinInit(GPIO, lpc_pin_map[pin].gpio_port, lpc_pin_map[pin].gpio_pin, &pin_config); 
}

static void lpc_pin_write(os_device_t *dev, os_base_t pin, os_base_t value)
{
    if ((pin > __ARRAY_LEN(lpc_pin_map)) || (pin == 0))
    {
        return;
    }
    
    GPIO_PinWrite(lpc_pin_map[pin].gpio, lpc_pin_map[pin].gpio_port, lpc_pin_map[pin].gpio_pin, value);
}

static int lpc_pin_read(os_device_t *dev, os_base_t pin)
{
    int value;   
    if ((pin > __ARRAY_LEN(lpc_pin_map)) || (pin == 0))
    {
        return OS_ERROR;
    }

    value = GPIO_PinRead(lpc_pin_map[pin].gpio, lpc_pin_map[pin].gpio_port, lpc_pin_map[pin].gpio_pin);
    
    return value;
}

static void pin_irq_hdr(pint_pin_int_t pintr, uint32_t pmatch_status)
{
    int irqno = 0;
    for(irqno = 0; irqno < IRQ_MAX_VAL; irqno ++)
    {
        if((irqno) == pintr)
        {
            break;
        }
    }
    
    if(irqno >= IRQ_MAX_VAL)
        return;
    
    if (pin_irq_hdr_tab[irqno].hdr)
    {
        pin_irq_hdr_tab[irqno].hdr(pin_irq_hdr_tab[irqno].args);
    }
}

static os_err_t lpc_pin_attach_irq(struct os_device *device,
                                   os_int32_t pin,
                                   os_uint32_t mode,
                                   void (*hdr)(void *args),
                                   void *args)
{
    int trigger_mode, pin_initx, pintsel, pin_cfg, i;    
    
    if ((pin > __ARRAY_LEN(lpc_pin_map)) || (pin == 0))
    {
        return OS_ERROR;
    }

    switch (mode)
    {
        case PIN_IRQ_MODE_RISING:
            trigger_mode = kPINT_PinIntEnableRiseEdge;
            break;
        case PIN_IRQ_MODE_FALLING:
            trigger_mode = kPINT_PinIntEnableFallEdge;
            break;
        case PIN_IRQ_MODE_RISING_FALLING:
            trigger_mode = kPINT_PinIntEnableBothEdges;
            break;
        case PIN_IRQ_MODE_HIGH_LEVEL:
            trigger_mode = kPINT_PinIntEnableHighLevel;
            break;
        case PIN_IRQ_MODE_LOW_LEVEL:
            trigger_mode = kPINT_PinIntEnableLowLevel;
            break;
    }
    
    /* Get inputmux_connection_t */        
    pintsel = (pin - 1 + (0xC0U << 20));
    
    for(i = 0; i < IRQ_MAX_VAL; i++)
    {
        if(pin_irq_hdr_tab[i].pin == -1)
        {
            pin_initx = kPINT_PinInt0 + i;
            pin_irq_hdr_tab[i].pin = pin;
            pin_irq_hdr_tab[i].mode = trigger_mode;
            pin_irq_hdr_tab[i].hdr = hdr;
            pin_irq_hdr_tab[i].args = args;
            break;
        }
    }

    if(i >= IRQ_MAX_VAL)
        return OS_ERROR;
    
    /* Initialize PINT */
    PINT_Init(PINT);
    
    /* Enable Input and IOCon clk */
    /* AttachSignal */    
    /* Connect trigger sources to PINT */
    INPUTMUX_Init(INPUTMUX);
    INPUTMUX_AttachSignal(INPUTMUX, i, (inputmux_connection_t)pintsel);
    /* Turnoff clock to inputmux to save power. Clock is only needed to make changes */
    INPUTMUX_Deinit(INPUTMUX);
    
    pin_cfg = ((IOCON->PIO[lpc_pin_map[pin].gpio_port][lpc_pin_map[pin].gpio_pin] &
              (~(IOCON_PIO_FUNC_MASK | IOCON_PIO_DIGIMODE_MASK | IOCON_PIO_FILTEROFF_MASK))) /* Mask bits to zero which are setting */
              | IOCON_PIO_FUNC(0)                /* Selects pin function.: PORT18 (pin 28) is configured as PIO1_8 */
              | IOCON_PIO_DIGIMODE(1)            /* Select Analog/Digital mode.: Digital mode. */
              | IOCON_PIO_FILTEROFF(0));         /* Controls input glitch filter.: Filter enabled. Noise pulses below approximately 10 ns are filtered out. */
                   
    IOCON_PinMuxSet(IOCON, lpc_pin_map[pin].gpio_port, lpc_pin_map[pin].gpio_pin, pin_cfg);    
    
    /* PINT_PinInterruptConfig */
    PINT_PinInterruptConfig(PINT, (pint_pin_int_t)pin_initx, (pint_pin_enable_t)(pin_irq_hdr_tab[i].mode), callback);    
    /* Enable callbacks for PINTx by Index */
    PINT_EnableCallbackByIndex(PINT, (pint_pin_int_t)pin_initx);
    
    return OS_EOK;
}

static os_err_t lpc_pin_irq_enable(struct os_device *device, os_base_t pin, os_uint32_t enabled)
{
    int irqn_type, i;
    
    if ((pin > __ARRAY_LEN(lpc_pin_map)) || (pin == 0))
    {
        return OS_ERROR;
    }
    
    for(i = 0; i < IRQ_MAX_VAL; i++)
    {
        if(pin_irq_hdr_tab[i].pin == pin)
        {
            switch(i)
            {
                case 0: irqn_type = PIN_INT0_IRQn; break;
                case 1: irqn_type = PIN_INT1_IRQn; break;
                case 2: irqn_type = PIN_INT2_IRQn; break;
                case 3: irqn_type = PIN_INT3_IRQn; break;
                case 4: irqn_type = PIN_INT4_IRQn; break;
                case 5: irqn_type = PIN_INT5_IRQn; break;
                case 6: irqn_type = PIN_INT6_IRQn; break;
                case 7: irqn_type = PIN_INT7_IRQn; break;
                default:break;
            }
            if(enabled)
            {
                /* PINT_EnableCallback */
                PINT_PinInterruptClrStatusAll(PINT);
                NVIC_ClearPendingIRQ((IRQn_Type)irqn_type);
                PINT_PinInterruptClrStatus(PINT, (pint_pin_int_t)(kPINT_PinInt0 + i));
                EnableIRQ((IRQn_Type)irqn_type);
            }
            else
            {
                /* PINT_DisableCallback */
                DisableIRQ((IRQn_Type)irqn_type);
                PINT_PinInterruptClrStatus(PINT, (pint_pin_int_t)(kPINT_PinInt0 + i));
                NVIC_ClearPendingIRQ((IRQn_Type)irqn_type);
            }
            break;
        }
    }  
        
    if(i >= IRQ_MAX_VAL)
        return OS_ERROR;

    return OS_EOK;
}

int os_hw_pin_init(void)
{
    int ret = OS_EOK;

    lpc_pin_ops.pin_mode        = lpc_pin_mode;
    lpc_pin_ops.pin_read        = lpc_pin_read;
    lpc_pin_ops.pin_write       = lpc_pin_write;
    lpc_pin_ops.pin_attach_irq  = lpc_pin_attach_irq;
    lpc_pin_ops.pin_detach_irq  = lpc_pin_detach_irq;
    lpc_pin_ops.pin_irq_enable  = lpc_pin_irq_enable;

    ret = os_device_pin_register(0, &lpc_pin_ops, OS_NULL);

    return ret;
}
